Fix shift click selection not working in Qt6

Fixed shift click layer selection not working in Qt6, 
by removing a custom `selectCommand` function from `NodeView`.

Those workarounds don't seem to be necessary anymore as all the related
bugs have been fixed in the newer Qt versions. And now the only thing
it's doing is breaking the Qt6 version.

BUG:510215